--- a/html/newRegister.html
+++ b/html/newRegister.html
@@ -31,11 +31,11 @@
                     <div class="col-md-5 col-12 mb-4">
                         <label for="newReg-norm" class="form-label">Nomor RM</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="23-A-0001" aria-label="Nomor RM"
-                                autocomplete="off" id="newReg-norm" oninput="reMasking(this, 'noRM')"
-                                onblur="noRMLeave(this)">
-                            <button class="input-group-text btn btn-primary" id=""
-                                onclick="newReg_generateRM()">Generate</button>
+                            <input type="text" class="form-control" placeholder="Gunakan format 23-A-0001"
+                                aria-label="Nomor RM" autocomplete="off" id="newReg-norm"
+                                oninput="reMasking(this, 'noRM')" onblur="noRMLeave(this)">
+                            <button class="input-group-text btn btn-primary" id="newPatienRM-btn"
+                                onclick="generateRMManual('new')">Generate: New</button>
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                 <div class="row m-0 mb-5">
                     <div class="col-md-6 col-12">
                         <label for="newReg-uk" class="form-label">Usia Kehamilan</label>
-                        <input id="newReg-uk" type="text" class="form-control mb-2" placeholder="39+1"
+                        <input id="newReg-uk" type="text" class="form-control mb-2" placeholder="Format: 39 mg + 1"
                             oninput="reMasking(this, 'uk')" autocomplete="off">
                         <div class="input-deskripsi">
                             <div>
