--- a/html/home.html
+++ b/html/home.html
@@ -261,6 +261,35 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="antrianAction" tabindex="-1" aria-labelledby="antrianActionLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-fullscreen-md-down modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="modal-title fs-5" id="antrianActionLabel">
+                    <div>
+                        Data Pasien Reservasi
+                    </div>
+                    <div>
+                        Nomor Antrian = <span id="modAn-bd-antriUrut"></span>
+                    </div>
+                    <div>
+                        ID = <span id="modAn-bd-antriID"></span>
+                    </div>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body modAn-bd-body-antrian">
+                <button class="btn btn-primary">Edit SOAP</button>
+                <button class="btn btn-primary">Tandai Belum Selesai</button>
+                <button class="btn btn-primary">Tandai sebagai Selesai</button>
+                <button class="btn btn-primary">Tandai sebagai Batal</button>
+                <button class="btn btn-primary">Hapus riwayat SOAP</button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="" id="home-container">
     <div class="home-pasien-container">
@@ -272,6 +301,7 @@
             <div>
                 <div>
                     <div id="pasien-card-name" class="homereset">Argadia lkj lkja sldkjm, lkj alskj asdn</div>
+                    <div class="pasien-card-other homereset" id="pasien-card-relasi">PEREMPUAN</div>
                     <div class="pasien-card-other homereset" id="pasien-card-gender">PEREMPUAN</div>
                     <div id="pasien-card-ttl" class="pasien-card-other homereset">21/10/2022 <span>(12th 11bln
                             3hr)</span></div>
@@ -484,5 +514,9 @@
 
 <button type="button" class="btn btn-primary d-none" id="reservasiAction_btn" data-bs-toggle="modal"
     data-bs-target="#reservasiAction">
+    Launch demo modal
+</button>
+<button type="button" class="btn btn-primary d-none" id="antrianAction_btn" data-bs-toggle="modal"
+    data-bs-target="#antrianAction">
     Launch demo modal
 </button>
